adding connection timeout for long req to internet