@@ -22,6 +22,11 @@ import java.net.UnknownHostException;
 import java.util.BitSet;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -79,11 +84,13 @@ public class ProxyServer {
                 } else {
                     // if response is null then Call internet
                     response = fetchRequestFromInternet(url);
-                    // After fetch from internet put in cache
-                    appendCache(url, response);
-                    totalNumOfDirectRequests++;
-                    // Append in Bloom filter
-                    filter.add(url);
+                    if(response != null) {
+                        // After fetch from internet put in cache
+                        appendCache(url, response);
+                        totalNumOfDirectRequests++;
+                        // Append in Bloom filter
+                        filter.add(url);
+                    }
                 }
 
             }
@@ -100,19 +107,19 @@ public class ProxyServer {
 
         try {
             if (response == null) {
-            // Case of false positive
-            totalNumOfFalsePositive++;
-            // if response is null then Call internet
-            response = fetchRequestFromInternet(url);
-            // After fetch from internet put in cache
-            appendCache(url, response);
-            // Append in Bloom filter
-            filter.add(url);
+                // Case of false positive
+                totalNumOfFalsePositive++;
+                // if response is null then Call internet
+                response = fetchRequestFromInternet(url);
+                // After fetch from internet put in cache
+                appendCache(url, response);
+                // Append in Bloom filter
+                filter.add(url);
 
-        } else {
-            // Case of true positive
-            totalNumOfTruePositive++;
-        }
+            } else {
+                // Case of true positive
+                totalNumOfTruePositive++;
+            }
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -175,28 +182,72 @@ public class ProxyServer {
      */
     public String fetchRequestFromInternet(String urlString) {
         URL url;
-        StringBuilder responseContent = null;
+        String responseContent = null;
+        ExecutorService executor = Executors.newSingleThreadExecutor();
+
         try {
-            url = new URI(urlString).toURL();
+            url = new URL(urlString);
+            Future<String> future = executor.submit(() -> performApiCall(url));
+
+            // Set a timeout of 5 seconds
+            responseContent = future.get(5, TimeUnit.SECONDS);
+        } catch (TimeoutException e) {
+            System.out.println("API call timed out");
+        } catch (Exception e) {
+            e.printStackTrace();
+        } finally {
+            executor.shutdown();
+        }
+        /*
+         * try {
+         * 
+         * url = new URI(urlString).toURL();
+         * HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+         * connection.setRequestMethod("GET");
+         * connection.setConnectTimeout(5000);
+         * connection.setConnectTimeout(5000);
+         * // int responseCode = connection.getResponseCode();
+         * // System.out.println("Response Code: " + responseCode);
+         * BufferedReader reader = new BufferedReader(new
+         * InputStreamReader(connection.getInputStream()));
+         * String line;
+         * responseContent = new StringBuilder();
+         * while ((line = reader.readLine()) != null) {
+         * responseContent.append(line);
+         * break;
+         * }
+         * reader.close();
+         * } catch (IOException e) {
+         * e.printStackTrace();
+         * } catch (URISyntaxException e) {
+         * e.printStackTrace();
+         * }
+         */
+
+        return responseContent != null ? responseContent.toString() : null;
+    }
+
+    private String performApiCall(URL url) {
+        try {
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
-            // int responseCode = connection.getResponseCode();
-            // System.out.println("Response Code: " + responseCode);
+
             BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+            StringBuilder responseContent = new StringBuilder();
             String line;
-            responseContent = new StringBuilder();
+
             while ((line = reader.readLine()) != null) {
                 responseContent.append(line);
                 break;
             }
-            reader.close();
-        } catch (IOException e) {
-            e.printStackTrace();
-        } catch (URISyntaxException e) {
-            e.printStackTrace();
-        }
 
-        return responseContent != null ? responseContent.toString() : null;
+            reader.close();
+            connection.disconnect();
+
+            return responseContent.toString();
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
     }
 
     public void appendCache(String url, String content) {
